<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="DuplicateIds" >

    <LinearLayout
        android:id="@+id/layoutAction"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="?attr/titleColor"
        android:orientation="horizontal" >

		<ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/title_activity_slope"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>

<LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutAction" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_below="@+id/linearLayoutTitle" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:text="@string/rarrow"/>

        <EditText 
            android:imeOptions="actionNext"
            android:id="@+id/editX1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/X1" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/comma"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText 
            android:imeOptions="actionNext"
            android:id="@+id/editY1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/Y1" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/darrow"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText 
            android:imeOptions="actionNext"
            android:id="@+id/editX2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/X2" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/comma"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editY2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:ems="10"
            android:hint="@string/Y2"
            android:imeOptions="actionGo"
            android:inputType="numberDecimal|numberSigned" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/larrow"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="slope"
        android:text="@string/get_slope" />

    <TextView
        android:textIsSelectable="true"
        android:id="@+id/textRes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button1"
        android:layout_below="@+id/linearLayout1"
        android:paddingTop="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>